--- a/HW2.Rmd
+++ b/HW2.Rmd
@@ -108,7 +108,7 @@ $$wks_{i}=\beta_0+\beta_1 lwage_{i} + \beta_2 ed_{i} +\beta_3 union_{i} +\beta_4
 在勞動市場中，產業別不同其對勞動力的需求也不一樣。另外，不同地點的勞動需求狀況也不同。使用文字邏輯說明「產業別」、勞動者「居住地」可能是合理工具變數的理由。
 
 ```
-
+產業別與會影響薪資高低且與非薪資效應的勞動需求無關。而勞動者的居住地也可能是合理的工具變數因為居住地也會影響薪資高低且亦與非薪資效應的勞動需求無關。因此兩者皆可能為合理的工具變數，符合相關性條件與排除條件。
 ```
 
 ### (10)
